--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "npx playwright test",
+    "test:unit": "vitest run --exclude='**/*.browser.spec.*'",
+    "test:component": "vitest run --browser.enabled --browser.name=chromium --browser.headless",
+    "test:component:headed": "vitest run --browser.enabled --browser.name=chromium",
+    "test:watch": "vitest --browser.enabled",
     "test:headed": "npx playwright test --headed",
+    "test:e2e": "npx playwright test --project=react-tests",
     "demo": "npx playwright test demo-recording.spec.js --headed",
     "demo:record": "npx playwright test demo-recording.spec.js"
   },
@@ -19,12 +24,19 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser": "^3.0.0",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^27.4.0",
+    "playwright": "^1.40.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^3.0.0",
+    "vitest-browser-react": "^0.1.0"
   }
 }
